# open-lark

./: .cargo-llvm-cov.toml  .clippy.toml  .env  .env-example  .feature-matrix.toml  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BASE_API_ANALYSIS_FINAL_REPORT.md  BASE_API_IMPLEMENTATION_COMPLETE_REPORT.md  BASE_API_IMPLEMENTATION_PLAN.md  BASE_API_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRATE_REFACTORING_PLAN.md  Cargo.toml  Cargo.toml.backup  DOCUMENTATION_INDEX.md  DOCUMENTATION_URL_CHECKLIST.md  DRIVE_BUILDER_EXECUTE_METHODS.md  FINAL_API_ANALYSIS_REPORT.md  GEMINI.md  INTERFACE_ENHANCEMENT_PHASE_SUMMARY.md  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_STRATEGY.md  MIGRATION_SUMMARY.md  NEW_DIRECTORY_STRUCTURE.md  PHASE3_COMPLETION_REPORT.md  PHASE_0_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  REFACTOR_REPORT.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SERVICE_API_SUMMARY.md  SERVICE_REGISTRY_LOCAL_VALIDATION.md  (+164 more)
crates/open-lark-ai/: Cargo.toml
crates/open-lark-ai-platform/: Cargo.toml
crates/open-lark-collaboration/: Cargo.toml
crates/open-lark-communication/: Cargo.toml
crates/open-lark-enterprise/: Cargo.toml
crates/open-lark-extensions/: Cargo.toml
crates/open-lark-hr-suite/: Cargo.toml
crates/open-lark-integrations/: Cargo.toml
crates/openlark-ai/: Cargo.toml
crates/openlark-analytics/: Cargo.toml
crates/openlark-application/: Cargo.toml  README.md
crates/openlark-approval/: Cargo.toml
crates/openlark-auth/: API_GAP_ANALYSIS.md  API_IMPLEMENTATION_PLAN.md  Cargo.toml  DIRECTORY_STRUCTURE_DESIGN.md  README.md  RESTRUCTURE_PLAN.md  STRUCTURE_DESIGN.md  TEST_FRAMEWORK_DESIGN.md
crates/openlark-cardkit/: Cargo.toml  README.md
crates/openlark-client/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/openlark-communication/: AGENTS.md  Cargo.toml
crates/openlark-core/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/openlark-docs/: AGENTS.md  API_CHECK_REPORT.md  API_TESTING_IMPLEMENTATION_REPORT.md  CCM_SHEET_FIXES_SUMMARY.md  CCM_SHEET_IMPLEMENTATION_SUMMARY.md  Cargo.toml  README.md  README_CCM_Sheet.md  api_check_tool.py  base_bitable_api_analysis.md
crates/openlark-helpdesk/: Cargo.toml
crates/openlark-hr/: AGENTS.md  Cargo.toml
crates/openlark-im/: Cargo.toml
crates/openlark-learning/: Cargo.toml
crates/openlark-mail/: Cargo.toml
crates/openlark-meeting/: AGENTS.md  API_COMPLETION_REPORT.md  API_IMPLEMENTATION_PROGRESS.md  API_LIST.md  CLEANUP_EXECUTION_REPORT.md  CLEANUP_REPORT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
crates/openlark-people/: Cargo.toml
crates/openlark-platform/: Cargo.toml
crates/openlark-protocol/: Cargo.toml  build.rs
examples/: .env-example  Cargo.toml  README.md  advanced_compatibility_demo.rs  advanced_enhanced_builder.rs  attendance_demo.rs  auth_login_examples.md  base_v2_roles_demo.rs  basic_introduction.rs  basic_login_demo.rs  cloud_docs_test.rs  comments_test.rs  compatibility_migration_demo.rs  contact_custom_attrs_example.rs  contact_get_user_groups_example.rs  custom_bot.rs  dependency_analysis_demo.rs  docs_service_demo.rs  ehr_leave_demo.rs  enhanced_builder_demo.rs  enhanced_wiki_service.rs  feature_combination_examples.rs  feature_demo.rs  feishu_card.rs  multi_service_enhanced_builder.rs  passport_example.rs  performance_benchmark.rs  quick_start.rs  security_service_demo.rs  service_registry_benchmark.rs  service_registry_demo.rs  shared_config_demo.rs  shared_config_performance.rs  task_api_example.rs  test_debug.rs  test_endpoints_unification.rs  unified_client_demo.rs  workflow_api_example.rs  ws_client.rs  ws_client_example.rs
examples/01_getting_started/: .env.example  README.md  authentication.rs  client_setup.rs  communication_workflows.rs  docs_helpers.rs  docs_workflows.rs  first_api_call.rs  readme_quick_start.rs  simple_api_call.rs  websocket_echo_bot.rs
examples/api/: acs_example.rs  admin_demo.rs  ai_comprehensive.rs  aily_v1_example.rs  apass_example.rs  application_demo.rs  approval_demo.rs  attendance_demo.rs  auth_example.rs  background_token_preheating.rs  board_example.rs  bot_demo.rs  calendar_comprehensive_example.rs  calendar_demo.rs  cardkit_demo.rs  cardkit_example.rs  cloud_docs_unified_example.rs  compensation_management_example.rs  comprehensive_error_management.rs  contact_v3_comprehensive.rs  contact_v3_group_detail.rs  contact_v3_role_management.rs  contact_v3_user_list.rs  contact_v3_user_management.rs  corehr_demo.rs  data_processing_with_enhanced_builder.rs  directory_demo.rs  directory_v1_department_extended.rs  directory_v1_employee_extended.rs  directory_v1_management.rs  drive_builder_execute_demo.rs  drive_builder_pattern.rs  ehr_demo.rs  ehr_v1_demo.rs  elearning_v2_course_registration.rs  elearning_v2_management.rs  enhanced_drive_operations.rs  enhanced_error_handling.rs  enterprise_scenario_with_enhanced_builder.rs  event_example.rs  (+54 more)
examples/archived/: comprehensive_error_codes_demo.rs  data_processing_with_enhanced_builder.rs  data_validation_operations.rs  token_performance_monitoring.rs
examples/basic/: 00_client_setup.rs  01_authentication.rs  02_first_api_call.rs  03_error_handling.rs  (+3 more)
tools/: Cargo.toml  add_execute_with_options.py  add_execute_with_options_v2.py  api_compatibility_tester.rs  api_consistency_checker.rs  api_coverage.toml  api_priority.toml  api_validation_checker.rs  architecture_fix.rs  audit_todos.py  batch_api_improver  batch_api_improver.rs  batch_architecture_fix.sh  check_api_urls.py  classify_apis.py  comprehensive_fix.py  doc_url_detector.rs  enhanced_api_checker.rs  export_server_api_list.py  fix_all_imports.py  fix_all_old_code.py  fix_imports.py  fix_imports_final.py  fix_lint_errors.py  fix_missing_return.py  fix_remaining_files.py  fix_transport_calls.py  fix_unused_variables.py  fix_validation_patterns.py  fix_workflow_tests.py  fix_workflow_tests2.py  fix_workflow_tests3.py  issue41_guardrail.py  migration_validator.py  performance_benchmark.rs  release_quality_status.py  remove_builders.py  restructure_hr.py  service_template_generator.rs  simple_api_checker.rs  (+6 more)
(+12031 files in other folders)
