[workspace]
resolver = "2"
members = [
    # 核心基础设施模块
    "crates/openlark-core",
    "crates/openlark-client",
    "crates/openlark-protocol",

    # Phase 1: P0 核心业务模块
    "crates/openlark-docs",
    "crates/openlark-security",

    # 已存在的业务模块
    "crates/openlark-communication",
    # 暂时移除有依赖问题的模块
    # "crates/openlark-admin",
    # "crates/openlark-application",
    # "crates/openlark-approval",
    # "crates/openlark-apass",
    # "crates/openlark-hire",
    # "crates/openlark-lingo",
    # "crates/openlark-mail",
    # "crates/openlark-helpdesk",
    # "crates/openlark-task",
]

[workspace.package]
version = "0.15.0-dev"
edition = "2021"
rust-version = "1.75"
authors = ["ZoOL <zhooul@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/foxzool/open-lark"
homepage = "https://github.com/foxzool/open-lark"
documentation = "https://docs.rs/open-lark"
description = "飞书开放平台 Rust SDK - 企业级 API 客户端"
keywords = ["feishu", "lark", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "development-tools"]

[workspace.dependencies]
# External dependencies (shared version management)
anyhow = "1.0.86"
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
hmac = "0.12.1"
log = "0.4.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
rand = "0.8"
serde_repr = "0.1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
strum = "0.27"
urlencoding = "2.1"
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
lark-websocket-protobuf = "0.1"
opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17" }
tracing-opentelemetry = { version = "0.25" }
prost = { version = "0.13" }
quick_cache = { version = "0.6.3", features = [] }
tokio-tungstenite = { version = "0.23", features = [
    "rustls-tls-native-roots",
] }
walkdir = "2.4"
regex = "1.10"

# Internal workspace dependencies
openlark-core = { path = "crates/openlark-core" }
openlark-client = { path = "crates/openlark-client" }
openlark-protocol = { path = "crates/openlark-protocol" }

# Phase 1: P0 核心业务模块
openlark-docs = { path = "crates/openlark-docs" }
openlark-security = { path = "crates/openlark-security" }
openlark-communication = { path = "crates/openlark-communication" }

# Phase 2+ 模块（暂时注释以解决依赖冲突）
# openlark-admin = { path = "crates/openlark-admin" }
# openlark-application = { path = "crates/openlark-application" }
# openlark-approval = { path = "crates/openlark-approval" }
# openlark-apass = { path = "crates/openlark-apass" }
# openlark-hire = { path = "crates/openlark-hire" }
# openlark-lingo = { path = "crates/openlark-lingo" }
# openlark-mail = { path = "crates/openlark-mail" }
# openlark-helpdesk = { path = "crates/openlark-helpdesk" }
# openlark-task = { path = "crates/openlark-task" }

# Test dependencies shared across workspace
rstest = "0.19"
proptest = "1.0"
tempfile = "3.8"
test-log = "0.2"
tracing-test = "0.2"
wiremock = "0.6"
once_cell = "1.19"
mockall = "0.12"

# Examples需要的依赖
dotenvy = "0.15"
env_logger = "0.10"
criterion = "0.5"

## Convenience package configuration for unified publishing
[package]
name = "open-lark"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "飞书开放平台 Rust SDK - 企业级高覆盖率 API 客户端，极简依赖一条命令"
keywords = ["feishu", "lark", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "development-tools"]
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = true

[dependencies]
# 核心基础设施（始终包含）
openlark-core = { workspace = true }

# 功能模块
openlark-client = { workspace = true }
openlark-protocol = { workspace = true }
openlark-communication = { workspace = true }

# 重新导出工作空间依赖，为用户提供便利访问
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
serde_repr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
lark-websocket-protobuf = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
env_logger = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }
once_cell = { workspace = true }
mockall = { workspace = true }

[lib]
name = "open_lark"
path = "src/lib.rs"

[[bench]]
name = "config_performance"
harness = false