[workspace]
resolver = "2"
members = [
    # === 核心基础设施 (Core Infrastructure) ===
    "crates/openlark-core",           # 核心 HTTP 客户端和错误处理
    "crates/openlark-protocol",       # WebSocket 协议定义
    "crates/openlark-client",         # 高级客户端接口

    # === 生产就绪模块 (Production Ready) ===
    # 认证与安全
    "crates/openlark-auth",           # 认证服务
    "crates/openlark-security",       # 安全服务

    # === 通讯协作
    "crates/openlark-communication",  # IM 消息和联系人管理

    # === CardKit 卡片能力
    "crates/openlark-cardkit",        # CardKit 卡片实体与组件

    # === 文档管理
    "crates/openlark-docs",           # 云文档和表格服务

    # === 人力资源
    "crates/openlark-hr",             # 考勤和 CoreHR

    # === 开发中模块 (In Development) ===
    # 智能服务
    "crates/openlark-ai",             # AI 智能助手
    "crates/openlark-task",           # 任务/待办事项

    # 企业管理
    "crates/openlark-application",    # 应用管理
    "crates/openlark-platform",       # 平台服务

    # 协作工具
    "crates/openlark-meeting",        # 视频会议

    # 专业服务
    "crates/openlark-helpdesk",       # 帮助台
    "crates/openlark-mail",           # 邮件服务
    "crates/openlark-analytics",      # 数据分析
    "crates/openlark-user",           # 用户设置
]

[workspace.package]
version = "0.15.0-dev"
edition = "2021"
rust-version = "1.75"
authors = ["ZoOL <zhooul@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/foxzool/open-lark"
homepage = "https://github.com/foxzool/open-lark"
documentation = "https://docs.rs/open-lark"
description = "飞书开放平台 Rust SDK - 企业级 API 客户端"
keywords = ["feishu", "lark", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "development-tools"]

[workspace.dependencies]
# === 核心运行时 (Core Runtime) ===
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.83"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }

# === 序列化与数据处理 (Serialization & Data) ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = { version = "2.5.0", features = ["serde"] }
prost = { version = "0.13" }

# === 网络与HTTP (Networking & HTTP) ===
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
lark-websocket-protobuf = "0.1"

# === 加密与安全 (Cryptography & Security) ===
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"

# === 日志与追踪 (Logging & Tracing) ===
log = "0.4.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.25" }
opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17" }

# === 工具库 (Utilities) ===
anyhow = "1.0.86"
thiserror = "2.0"
rand = "0.8"
regex = "1.10"
strum = "0.27"
strum_macros = "0.27"
urlencoding = "2.1"
quick_cache = { version = "0.6.3", features = [] }
walkdir = "2.4"

# === 工作空间内部依赖 (Internal Workspace Dependencies) ===
# 核心基础设施模块
openlark-core = { path = "crates/openlark-core" }
openlark-protocol = { path = "crates/openlark-protocol" }
openlark-client = { path = "crates/openlark-client" }

# 生产就绪服务模块
openlark-auth = { path = "crates/openlark-auth" }
openlark-security = { path = "crates/openlark-security" }
openlark-communication = { path = "crates/openlark-communication" }
openlark-cardkit = { path = "crates/openlark-cardkit" }
openlark-docs = { path = "crates/openlark-docs" }
openlark-hr = { path = "crates/openlark-hr" }

# 开发中服务模块
openlark-ai = { path = "crates/openlark-ai" }
openlark-application = { path = "crates/openlark-application" }
openlark-platform = { path = "crates/openlark-platform" }
openlark-helpdesk = { path = "crates/openlark-helpdesk" }
openlark-mail = { path = "crates/openlark-mail" }
openlark-meeting = { path = "crates/openlark-meeting" }
openlark-task = { path = "crates/openlark-task" }
openlark-analytics = { path = "crates/openlark-analytics" }
openlark-user = { path = "crates/openlark-user" }

# Test dependencies shared across workspace
rstest = "0.19"
proptest = "1.0"
tempfile = "3.8"
test-log = "0.2"
tracing-test = "0.2"
wiremock = "0.6"
once_cell = "1.19"
mockall = "0.12"

# Examples需要的依赖
dotenvy = "0.15"
env_logger = "0.10"
criterion = "0.5"

## Convenience package configuration for unified publishing
[package]
name = "open-lark"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "飞书开放平台 Rust SDK - 企业级高覆盖率 API 客户端，极简依赖一条命令"
keywords = ["feishu", "lark", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "development-tools"]
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = true

[dependencies]
# 核心基础设施（始终包含）
openlark-core = { workspace = true }

# 功能模块
openlark-client = { workspace = true, optional = true }
openlark-protocol = { workspace = true, optional = true }
openlark-communication = { workspace = true, optional = true }
openlark-cardkit = { workspace = true, optional = true }
openlark-auth = { workspace = true, optional = true }
openlark-docs = { workspace = true, optional = true }
openlark-security = { workspace = true, optional = true }

# 其他服务模块
openlark-hr = { workspace = true, optional = true }
openlark-ai = { workspace = true, optional = true }
openlark-application = { workspace = true, optional = true }
openlark-platform = { workspace = true, optional = true }
openlark-helpdesk = { workspace = true, optional = true }
openlark-mail = { workspace = true, optional = true }
openlark-meeting = { workspace = true, optional = true }
openlark-task = { workspace = true, optional = true }
openlark-analytics = { workspace = true, optional = true }
openlark-user = { workspace = true, optional = true }

# 重新导出工作空间依赖，为用户提供便利访问
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
serde_repr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
lark-websocket-protobuf = { workspace = true }

# Examples 专用依赖
colored = "2.1"  # 用于彩色输出
clap = { version = "4.4", features = ["derive"] }  # 命令行参数解析

[dev-dependencies]
dotenvy = { workspace = true }
env_logger = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }
once_cell = { workspace = true }
mockall = { workspace = true }

[lib]
name = "open_lark"
path = "src/lib.rs"

[[bench]]
name = "config_performance"
harness = false

[features]
default = ["core-services"]

# === 基础层 (Foundation Layer) ===
# std = ["openlark-core"]  # openlark-core 是必需依赖，不应作为功能标志
client = ["openlark-client"]
protocol = ["openlark-protocol"]

# === 核心服务模块 (Core Services) ===
# 认证与安全
auth = ["client", "openlark-auth"]
security = ["client", "openlark-security"]

# 通讯与协作
communication = ["client", "openlark-communication"]

# CardKit 卡片能力
cardkit = ["client", "openlark-cardkit"]

# 文档管理
docs = ["client", "openlark-docs"]

# 人力资源
hr = ["client", "openlark-hr"]
task = ["client", "openlark-task"]

# === 高级服务模块 (Advanced Services) ===
ai = ["client", "openlark-ai"]
meeting = ["client", "openlark-meeting"]
helpdesk = ["client", "openlark-helpdesk"]
mail = ["client", "openlark-mail"]
application = ["client", "openlark-application"]
platform = ["client", "openlark-platform"]
analytics = ["client", "openlark-analytics"]
user = ["client", "openlark-user"]
base = ["client", "openlark-docs"]
bitable = ["client", "openlark-docs"]

# === 推荐功能组合 (Recommended Feature Sets) ===
# 核心业务功能
core-services = ["auth", "communication", "docs", "task"]

# 企业级功能
# enterprise = ["core-services", "security", "hr"]  # 暂时注释，待模块验证完成

# 全功能（当前可用）
# full = ["enterprise", "meeting"]  # 暂时注释，待模块验证完成

# === 开发与调试 (Development & Debugging) ===
dev-tools = []  # 开发工具
websocket = ["protocol"]  # WebSocket 支持
