[workspace]
resolver = "2"
members = [
    # === 核心基础设施 (Core Infrastructure) ===
    "crates/openlark-core",           # 核心 HTTP 客户端和错误处理
    "crates/openlark-protocol",       # WebSocket 协议定义
    "crates/openlark-client",         # 高级客户端接口

    # === 生产就绪模块 (Production Ready) ===
    # 认证与安全
    "crates/openlark-auth",           # 认证服务
    "crates/openlark-security",       # 安全服务

    # === 通讯协作
    "crates/openlark-communication",  # IM 消息和联系人管理

    # === CardKit 卡片能力
    "crates/openlark-cardkit",        # CardKit 卡片实体与组件

    # === Webhook 自定义机器人
    "crates/openlark-webhook",        # Webhook 自定义机器人

    # === 文档管理
    "crates/openlark-docs",           # 云文档和表格服务

    # === 人力资源
    "crates/openlark-hr",             # 考勤和 CoreHR

    # === 开发中模块 (In Development) ===
    # 智能服务
    "crates/openlark-ai",             # AI 智能助手
    "crates/openlark-workflow",       # 任务/审批/看板

    # 企业管理
    "crates/openlark-application",    # 应用管理
    "crates/openlark-platform",       # 平台服务

    # 协作工具
    "crates/openlark-meeting",        # 视频会议

    # 专业服务
    "crates/openlark-helpdesk",       # 帮助台
    "crates/openlark-mail",           # 邮件服务
    "crates/openlark-analytics",      # 数据分析
    "crates/openlark-user",           # 用户设置
]

[workspace.package]
version = "0.15.0-rc.1"
edition = "2021"
rust-version = "1.75"
authors = ["ZoOL <zhooul@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/foxzool/open-lark"
homepage = "https://github.com/foxzool/open-lark"
documentation = "https://docs.rs/open-lark"
description = "飞书开放平台 Rust SDK - 企业级 API 客户端"
keywords = ["feishu", "lark", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "development-tools"]

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# 允许某些常见的例外
multiple_crate_versions = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
# === 核心运行时 (Core Runtime) ===
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.83"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }

# === 序列化与数据处理 (Serialization & Data) ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = { version = "2.5.0", features = ["serde"] }
prost = { version = "0.13" }

# === 网络与HTTP (Networking & HTTP) ===
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
lark-websocket-protobuf = "0.1"

# === 加密与安全 (Cryptography & Security) ===
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"

# === 日志与追踪 (Logging & Tracing) ===
log = "0.4.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.25" }
opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17" }

# === 工具库 (Utilities) ===
anyhow = "1.0.86"
thiserror = "2.0"
rand = "0.8"
regex = "1.10"
strum = "0.27"
strum_macros = "0.27"
urlencoding = "2.1"
quick_cache = { version = "0.6.3", features = [] }
walkdir = "2.4"

# === 工作空间内部依赖 (Internal Workspace Dependencies) ===
# 核心基础设施模块
openlark-core = { path = "crates/openlark-core", version = "0.15.0-rc.1" }
openlark-protocol = { path = "crates/openlark-protocol", version = "0.15.0-rc.1" }
openlark-client = { path = "crates/openlark-client", version = "0.15.0-rc.1", default-features = false }

# 生产就绪服务模块
openlark-auth = { path = "crates/openlark-auth", version = "0.15.0-rc.1" }
openlark-security = { path = "crates/openlark-security", version = "0.15.0-rc.1" }
openlark-communication = { path = "crates/openlark-communication", version = "0.15.0-rc.1" }
openlark-cardkit = { path = "crates/openlark-cardkit", version = "0.15.0-rc.1" }
openlark-webhook = { path = "crates/openlark-webhook", version = "0.15.0-rc.1" }
openlark-docs = { path = "crates/openlark-docs", version = "0.15.0-rc.1" }
openlark-hr = { path = "crates/openlark-hr", version = "0.15.0-rc.1" }

# 开发中服务模块
openlark-ai = { path = "crates/openlark-ai", version = "0.15.0-rc.1" }
openlark-application = { path = "crates/openlark-application", version = "0.15.0-rc.1" }
openlark-platform = { path = "crates/openlark-platform", version = "0.15.0-rc.1" }
openlark-helpdesk = { path = "crates/openlark-helpdesk", version = "0.15.0-rc.1" }
openlark-mail = { path = "crates/openlark-mail", version = "0.15.0-rc.1" }
openlark-meeting = { path = "crates/openlark-meeting", version = "0.15.0-rc.1" }
openlark-workflow = { path = "crates/openlark-workflow", version = "0.15.0-rc.1" }
openlark-analytics = { path = "crates/openlark-analytics", version = "0.15.0-rc.1" }
openlark-user = { path = "crates/openlark-user", version = "0.15.0-rc.1" }

# Test dependencies shared across workspace
rstest = "0.19"
proptest = "1.0"
tempfile = "3.8"
test-log = "0.2"
tracing-test = "0.2"
wiremock = "0.6"
once_cell = "1.19"
mockall = "0.12"
insta = { version = "1.39", features = ["json"] }

# Examples需要的依赖
dotenvy = "0.15"
env_logger = "0.10"
criterion = "0.5"

## Convenience package configuration for unified publishing
[package]
name = "openlark"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
description = "飞书开放平台 Rust SDK - 企业级高覆盖率 API 客户端，极简依赖一条命令"
keywords = ["feishu", "lark", "api", "sdk", "rust"]
categories = ["api-bindings", "web-programming", "development-tools"]
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
# 核心基础设施（始终包含）
openlark-core = { workspace = true }
openlark-client = { workspace = true, default-features = false }

# 功能模块
openlark-communication = { workspace = true, optional = true }
openlark-cardkit = { workspace = true, optional = true }
openlark-webhook = { workspace = true, optional = true }
openlark-auth = { workspace = true, optional = true }
openlark-docs = { workspace = true, optional = true }
openlark-security = { workspace = true, optional = true }

# 其他服务模块
openlark-hr = { workspace = true, optional = true }
openlark-ai = { workspace = true, optional = true }
openlark-application = { workspace = true, optional = true }
openlark-platform = { workspace = true, optional = true }
openlark-helpdesk = { workspace = true, optional = true }
openlark-mail = { workspace = true, optional = true }
openlark-meeting = { workspace = true, optional = true }
openlark-workflow = { workspace = true, optional = true }
openlark-analytics = { workspace = true, optional = true }
openlark-user = { workspace = true, optional = true }

# 重新导出工作空间依赖，为用户提供便利访问
chrono = { workspace = true }
serde_repr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Examples 专用依赖（移至 dev-dependencies）
[dev-dependencies]
dotenvy = { workspace = true }
env_logger = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }
once_cell = { workspace = true }
mockall = { workspace = true }
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true }

[lib]
name = "open_lark"
path = "src/lib.rs"

[[bench]]
name = "config_performance"
harness = false

[[example]]
name = "websocket_echo_bot"
path = "examples/01_getting_started/websocket_echo_bot.rs"
required-features = ["communication", "websocket"]

[[example]]
name = "workflow_api_example"
path = "examples/workflow_api_example.rs"
required-features = ["workflow"]

[[example]]
name = "simple_api_call"
path = "examples/01_getting_started/simple_api_call.rs"
required-features = ["auth", "communication"]

[features]
default = ["auth"]

# === 核心服务模块 (Core Services) ===
# 认证与安全
auth = ["dep:openlark-auth", "openlark-client/auth"]
security = ["auth", "dep:openlark-security", "openlark-client/security"]

# 通讯与协作
communication = ["auth", "dep:openlark-communication", "openlark-client/communication"]

# CardKit 卡片能力
cardkit = ["auth", "dep:openlark-cardkit", "openlark-client/cardkit"]

# Webhook 自定义机器人
webhook = ["dep:openlark-webhook"]

# 文档管理
docs = ["auth", "dep:openlark-docs", "openlark-client/docs"]

# 人力资源
hr = ["dep:openlark-hr", "openlark-client/hr"]
workflow = ["dep:openlark-workflow"]

# === 高级服务模块 (Advanced Services) ===
ai = ["dep:openlark-ai", "openlark-client/ai"]
meeting = ["auth", "dep:openlark-meeting", "openlark-client/meeting"]
helpdesk = ["dep:openlark-helpdesk"]
mail = ["dep:openlark-mail"]
application = ["dep:openlark-application"]
platform = ["dep:openlark-platform"]
analytics = ["dep:openlark-analytics"]
user = ["dep:openlark-user"]

# === 推荐功能组合 (Recommended Feature Sets) ===
# 核心业务功能
essential = ["auth", "communication", "docs"]

# 企业级功能
enterprise = ["essential", "security", "hr", "workflow"]

# 全功能
full = [
    "enterprise",
    "ai",
    "meeting",
    "cardkit",
    "webhook",
    "helpdesk",
    "mail",
    "application",
    "platform",
    "analytics",
    "user",
]

# === 技术特性 (Technical Features) ===
websocket = ["openlark-client/websocket"]  # WebSocket 支持
otel = ["openlark-core/otel"]  # OpenTelemetry 支持
