[workspace]

[package]
name = "openlark-examples"
version = "0.15.0-dev"
edition = "2021"
publish = false

[dependencies]
# 使用本地依赖
openlark-core = { path = "../crates/openlark-core" }
openlark-client = { path = "../crates/openlark-client", optional = true }
openlark-communication = { path = "../crates/openlark-communication", optional = true }
openlark-docs = { path = "../crates/openlark-docs", optional = true }
openlark-hr = { path = "../crates/openlark-hr", optional = true }
openlark-ai = { path = "../crates/openlark-ai", optional = true }
openlark-auth = { path = "../crates/openlark-auth", optional = true }
openlark-protocol = { path = "../crates/openlark-protocol", optional = true }

# 外部依赖
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
env_logger = "0.11"
log = "0.4"

[features]
default = ["communication", "client", "auth"]
communication = ["openlark-communication"]
docs = ["openlark-docs"]
hr = ["openlark-hr"]
ai = ["openlark-ai"]
auth = ["openlark-auth"]
client = ["openlark-client"]
websocket = ["openlark-protocol"]

[[example]]
name = "basic_introduction"
path = "basic_introduction.rs"

[[example]]
name = "ws_client_example"
path = "ws_client_example.rs"
required-features = ["websocket"]

[[example]]
name = "im_messaging"
path = "services/communication/im_messaging.rs"
required-features = ["communication"]