[package]
name = "open-lark-ai-platform"
version.workspace = true
edition.workspace = true

[dependencies]
# 内部依赖
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

# Open Lark 核心依赖
open-lark-core = { workspace = true }
open-lark-communication = { workspace = true, optional = true }
open-lark-collaboration = { workspace = true, optional = true }
open-lark-hr-suite = { workspace = true, optional = true }
open-lark-enterprise = { workspace = true, optional = true }

[features]
# 默认功能
default = ["document_ai", "optical_char_recognition", "speech_to_text", "translation"]

document_ai = []
optical_char_recognition = []
speech_to_text = []
translation = []