[package]
name = "open-lark-communication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "open-lark-communication module for OpenLark SDK"

[dependencies]
open-lark-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
serde_repr = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
