[package]
name = "open-lark-extensions"
version = "0.15.0"
edition = "2021"

[dependencies]
# 内部依赖
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

# Open Lark 核心依赖
open-lark-core = { path = "../open-lark-core", version = "0.15.0" }

[features]
# 默认功能
default = ["mdm", "calendar", "mail"]

mdm = []
calendar = []
mail = []
helpdesk = []
minutes = []
moments = []
