[package]
name = "openlark-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OpenLark AI 智能助手模块 - 提供 AI 相关 API 支持"
repository.workspace = true
homepage.workspace = true
keywords = ["feishu", "lark", "ai", "sdk", "api"]
categories = ["api-bindings", "web-programming", "development-tools"]

[dependencies]
openlark-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[features]
default = ["v1"]
full = ["v1"]

v1 = []
