[package]
name = "openlark-analytics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "飞书开放平台数据分析模块 - 搜索服务、数据分析 API (14 APIs)"
keywords = ["feishu", "lark", "analytics", "api", "search", "data"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["search", "report"]

# === 核心功能模块 ===
core = []

# === 业务域功能 ===
# 搜索服务 (14 APIs)
search-core = []
search = ["search-core", "core"]

# 数据报表 (future)
report-core = []
report = ["report-core", "core"]

# === API版本支持 ===
v1 = ["core"]
v2 = ["v1"]
v3 = ["v2"]
v4 = ["v3"]

# === 功能组合 ===
# 完整分析功能
full = ["search", "report", "v4"]

# 向后兼容别名
analytics = ["search", "report"]
all-analytics = ["full"]

[dependencies]
# 核心依赖
openlark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.19"

# 工具依赖
uuid = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
serde_repr = { workspace = true }
log = { workspace = true }

# 可选依赖
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
