[package]
name = "openlark-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "OpenLark 应用管理模块 - 提供飞书应用 API"

[dependencies]
openlark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = ["v1", "async"]
async = ["tokio"]

# 应用 API 版本
v1 = []

# 完整功能集
full = ["v1", "async"]
